@@ -3,6 +3,7 @@ New in version 1.5.1 (XXX 2014)
  * New TestRelEx.java adds more unit test cases.
  * Bugfix multi-language support.
  * OpenCog server can now return multiple parses.
+ * Rename Inflection-TAG to Subscript-TAG.
 
 New in version 1.5.0 (21 November 2013)
  * Minor cleanup of windows *.bat file, build and config files.
